p2/confs/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: nginx:alpine
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c"]
        args:
          - |
            ARCH=$(uname -m)
            OS=$(uname -s | tr '[:upper:]' '[:lower:]')
            cp /usr/share/nginx/html-template/index.html /usr/share/nginx/html/index.html
            sed -i "s/POD_NAME_PLACEHOLDER/${POD_NAME}/g" /usr/share/nginx/html/index.html
            sed -i "s/NODE_NAME_PLACEHOLDER/${NODE_NAME} (${OS}\/${ARCH})/g" /usr/share/nginx/html/index.html
            nginx -g 'daemon off;'
        volumeMounts:
        - name: html-template
          mountPath: /usr/share/nginx/html-template
      volumes:
      - name: html-template
        configMap:
          name: app1-html
---
apiVersion: v1
kind: Service
metadata:
  name: app-one-service
  namespace: default
spec:
  selector:
    app: app-one
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
