p2/confs/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: nginx:alpine
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c"]
        args:
          - |
            ARCH=$(uname -m)
            OS=$(uname -s | tr '[:upper:]' '[:lower:]')
            cp /usr/share/nginx/html-template/index.html /usr/share/nginx/html/index.html
            sed -i "s/POD_NAME_PLACEHOLDER/${POD_NAME}/g" /usr/share/nginx/html/index.html
            sed -i "s/NODE_NAME_PLACEHOLDER/${NODE_NAME} (${OS}\/${ARCH})/g" /usr/share/nginx/html/index.html
            nginx -g 'daemon off;'
        volumeMounts:
        - name: html-template
          mountPath: /usr/share/nginx/html-template
      volumes:
      - name: html-template
        configMap:
          name: app2-html
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: default
spec:
  selector:
    app: app-two
  ports:
  - port: 80
    targetPort: 80
